# STLConvert

STLConvert/: .project  STLConvert.cabal
STLConvert/src/: Main.hs
