name:           STLConvert
version:        0.1
cabal-version:  >=1.2
build-type:     Simple
author:         joe

executable STLConvert
  hs-source-dirs:  src
  main-is:         Main.hs
  build-depends:   
                   base >= 4,
                   binary >0.5,
                   data-binary-ieee754,
                   bytestring
  ghc-options:     -Wall

